# qb20-lorawan

./: .clangd  .gitignore  .mxproject  CMakeLists.txt  README.md  STM32L476VCTx_FLASH.ld  STM32L476VGTx_FLASH.ld  qb20-lorawan.ioc
App/inc/: app_lorawan.h
App/src/: app_lorawan.c
Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Custom_Middlewares/SWL2001/: CMakeLists.txt  modem_pinout.h
Custom_Middlewares/SWL2001/smtc_hal_l4/: smtc_hal_gpio_pin_names.h  smtc_hal_lp_timer.c  smtc_hal_mcu.c  smtc_hal_spi.c
Custom_Middlewares/SWL2001/smtc_modem_hal/: smtc_modem_hal.c
Device/: erase_mcu.jlink  flash_mcu.jlink  openocd-erase.ocd  openocd-flash.ocd  openocd-reset.ocd  openocd-stlink.cfg  reset_mcu.jlink
cmake/: flash.cmake  gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
